--- a/garden.css
+++ b/garden.css
@@ -10,12 +10,21 @@
   position: absolute;
 }
 
-#garden-map div.plant-area {
+#garden-map .plant-area {
   height: 50px;
   width: 50px;
+  opacity: 0.8;
   border: none;
+  background: none;
   background-repeat: repeat;
   background-position: left top;
+}
+
+/* Give a nice border while hovering (and moving). */
+#garden-map .plant-area:hover,
+#garden-map .plant-area.ui-resizable-resizing,
+#garden-map .plant-area.ui-draggable-dragging {
+  box-shadow: 0 0 2px 2px rgba(0, 0, 255, 0.5);
 }
 
 .month-selector {
