--- a/garden.css
+++ b/garden.css
@@ -55,3 +55,23 @@
 .selected-mode {
   border: thin solid black;
 }
+
+.ui-datepicker .ui-datepicker-prev .ui-icon {
+  /* jQuery UI widget override to fix the Previous Month button. */
+  background-image: url("smoothness/images/ui-icons_222222_256x240.png");
+  background-color: transparent;
+  background-position: -80px -192px;
+}
+.ui-datepicker .ui-datepicker-next .ui-icon {
+  /* jQuery UI widget override to fix the Next Month button. */
+  background-image: url("smoothness/images/ui-icons_222222_256x240.png");
+  background-color: transparent;
+  background-position: -48px -192px;
+}
+.ui-resizable-handle {
+  width: 12px;
+  height: 12px;
+  display:block;
+  background-position: -64px -224px;
+  background-color: transparent;
+}
