--- a/garden.css
+++ b/garden.css
@@ -13,7 +13,7 @@
 #garden-tools {
   width: 400px;
   height: 500px;
-  margin-left: 850px;
+  margin-left: 820px;
   position: absolute;
 }
 
@@ -32,10 +32,34 @@
   box-shadow: 0 0 2px 2px rgba(0, 0, 255, 0.5);
 }
 
+.plant-tools-link, .layout-tools-link {
+  padding: 2px;
+}
+
+.header-left {
+  float: left;
+}
+.header-right {
+  float: right;
+}
+
+.zoom-control {
+  margin-left: -5px;
+}
+.zoom-label {
+  display: inline-block;
+  vertical-align: middle;
+}
+
 .month-selector {
   left: 20px;
-  top: 600px;
+  top: 575px;
   position: absolute;
+}
+.month-selector-inner {
+  display: inline-block;
+  vertical-align: middle;
+  margin-bottom: 24px;
 }
 
 .header-links {
@@ -53,7 +77,7 @@
 }
 
 .selected-mode {
-  border: thin solid black;
+  box-shadow: 0 0 2px 2px rgba(0, 0, 255, 0.5);
 }
 
 .ui-datepicker .ui-datepicker-prev .ui-icon {
@@ -74,4 +98,7 @@
   display:block;
   background-position: -64px -224px;
   background-color: transparent;
+}
+.planting-copy-link, .planting-delete-link {
+  cursor: pointer;
 }
