--- a/garden.css
+++ b/garden.css
@@ -120,3 +120,13 @@
 .planting-copy-link, .planting-delete-link {
   cursor: pointer;
 }
+
+#add .ui-select {
+  margin: 10px 0 0 5px;
+}
+.plant-detail-info {
+  padding: 10px;
+}
+.plant-detail-image {
+  margin-left: 10px;
+}
